<?xml version="1.0" encoding="utf-8"?>
<!-- 注册页面 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/haircutmain"
    android:padding="10dip"
  	 >
    <!-- 手机号仅用于获取验证码，不会向第三方公开。 -->
    <RelativeLayout
        android:id="@+id/login_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="15dp"
    
         >
		    <TextView
		        android:id="@+id/register_header_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="25dp"
		        android:text="@string/register_header_text"
		        android:textColor="#999999" 
		        android:singleLine="true"
		        android:textSize="14sp"
		        />
		
		    <!-- 主体 -->
		
		    <RelativeLayout
		        android:id="@+id/register_body"
		        android:layout_width="match_parent"
		        android:layout_height="220dp"
		        android:layout_below="@id/register_header_text"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:layout_marginTop="20dp"
		        
		  		 >
		
		        <!-- 请输入手机号码 -->
		
		        <EditText
		            android:id="@+id/register_body_phone"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginTop="5dp"
		            android:background="@drawable/input_phone"
		            android:hint="@string/register_body_phone"
		            android:inputType="phone"
		            android:textColor="#b5b5b5" />
		
		        <!-- 获取验证码 -->
		
		        <Button
		            android:id="@+id/register_body_verification_btn"
		            android:layout_marginTop="20dip"
		            android:layout_width="140dp"
		            android:layout_height="30dp"
		            android:layout_centerHorizontal="true"
		            android:layout_below="@id/register_body_phone"
		            android:background="@drawable/regedit_validate"
		            android:textColor="#ffffff" />
		        <!-- 请输入验证码 -->
		
		        <EditText
		            android:id="@+id/register_body_verification"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_below="@id/register_body_verification_btn"
		            android:layout_marginTop="20dp"
		            android:background="@drawable/input_phone"
		            android:hint="@string/register_body_verification"
		            android:inputType="number"
		            android:textColor="#b5b5b5" />
		
		        <!-- 注册 -->
		
		        <Button
		            android:id="@+id/register_body_btn"
		            android:layout_width="match_parent"
		            android:layout_height="35dp"
		            android:layout_alignParentBottom="true"
		            android:background="@drawable/regedit_selected"
		            android:textColor="#ffffff"
		            android:textSize="24sp" />
		    </RelativeLayout>
		
		    <!-- 尾部 -->
		    <!-- 我要登录 -->
		    <TextView
		        android:id="@+id/register_my_login"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_below="@id/register_body"
		        android:layout_marginRight="40dp"
		        android:layout_marginTop="10dp"
		        android:text="@string/register_my_login_right" />
		
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/register_body"
		        android:layout_marginTop="10dp"
		        android:layout_toLeftOf="@id/register_my_login"
		        android:text="@string/register_my_login_left" />
		</RelativeLayout>
</RelativeLayout>