<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/hairdressing"
     >
        <RelativeLayout
            android:id="@+id/store_detail_layout"
            android:layout_width="fill_parent"
            android:layout_height="130dip"
            android:background="@drawable/hardress_top"
            android:layout_marginTop="10dip"
             >
            <ImageView
                android:id="@+id/store_detail_image"
                android:layout_width="100dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:src="@drawable/hanrdressin_logo" >
            </ImageView>

            <RelativeLayout
                android:id="@+id/store_baseinfo_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dip"
                android:layout_toRightOf="@id/store_detail_image" >

                <TextView
                    android:id="@+id/store_name_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="30dip"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/store_name_default"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

                <LinearLayout
                    android:id="@+id/store_detail_addr_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/store_name_desc"
                    android:layout_marginTop="3dip"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:id="@+id/store_detail_addr_img"
                        android:layout_width="25dip"
                        android:layout_height="20dip"
                        android:src="@drawable/btn_currentpostion" >
                    </ImageView>

                    <TextView
                        android:id="@+id/store_detail_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/store_address_default"
                        android:textColor="@color/darkgray" 
                     />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/store_detail_contract_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="20dip"
                    android:layout_below="@id/store_detail_addr_layout"
                    android:layout_marginTop="3dip"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:id="@+id/store_detail_phone_img"
                        android:layout_width="25dip"
                        android:layout_height="wrap_content"
                        android:src="@drawable/btn_iphone" >
                    </ImageView>

                    <TextView
                        android:id="@+id/store_detail_contract"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/store_address_default"
                        android:textColor="@color/darkgray" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/store_detail_description_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/store_detail_contract_layout"
                    android:layout_marginTop="3dip"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:id="@+id/store_detail_description_img"
                        android:layout_width="25dip"
                        android:layout_height="20dip"
                        android:src="@drawable/btn_postion" >
                    </ImageView>

                    <TextView
                        android:id="@+id/store_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/store_sale_default"
                        android:textColor="@color/darkgray" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
        
        
        
        <RelativeLayout 
            android:id="@+id/store_indrocution"
            android:layout_width="match_parent"
            android:layout_height="70dip"
            android:background="@drawable/hardress_top"
            >
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="match_parent"
               	android:background="@drawable/hardress_top"
                android:singleLine="false"
                android:text="@string/store_description"
                android:textColor="@color/white"
                />
        </RelativeLayout>
        <!-- 店员展示区 -->
        <RelativeLayout
            android:id="@+id/store_employees_detail_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dip"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
          >

            <ListView
                android:id="@+id/store_employees_detail_list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dip"
                android:cacheColorHint="#00000000"
                android:divider="@null"
                android:dividerHeight="10dip"
                android:scrollbars="none" />
        </RelativeLayout>


</LinearLayout>